# latch-plots-faas

./: .gitignore  .gitmodules  LICENSE  README.md  algorithm.json  output.txt  pyproject.toml  run_local.py
.claude/skills/latch-data-access/: SKILL.md
.claude/skills/latch-plots-ui/: SKILL.md
.claude/skills/latch-workflows/: SKILL.md
.claude/skills/takara-seeker-trekker/: SKILL.md
.claude/skills/visium-spaceranger-analysis/: SKILL.md
env/: prod.sh
runtime/: config.py  main.py  start.py
runtime/dask/: dd_expr.yaml
runtime/mount/: agent.py  agent_TODO.md  build.py  config_loader.py  entrypoint.py  headless_browser.py  instructions.py  kernel.py  lplots  new_agent.py  plots_context_manager.py  socketio.py  socketio_thread.py  stdio_over_socket.py  subsample.py  tools.py  utils.py  widget_update_thread.py
runtime/mount/agent_config/: README.md  prompts.py  system_prompt.md  tools.py
runtime/mount/agent_config/context/: default_behavior.md  index.md  normal_behavior.md  proactive_behavior.md  proactive_mode.md  step_by_step_behavior.md  step_by_step_mode.md
runtime/mount/agent_config/context/curation/: main.md
runtime/mount/agent_config/context/eval_curriculum/: eval_json_anatomy.md  examples.md  graders.md  main.md  shared_rubric.md
runtime/mount/agent_config/context/examples/: proactive.md  step_by_step.md
runtime/mount/agent_config/context/latch_api_docs/: latch_api_reference.md  lpath.md  spatial_annotation.md
runtime/mount/agent_config/context/notebook_context/: cells.md  plan.json
runtime/mount/agent_config/context/technology_docs/: atlasxomics.md  banksy.md  cell_types.json  marker_cell_typing.md  rapids.md  single_cell.md  takara.md  visium.md  vizgen.md  vizgen_prompts.md  xenium.md
runtime/mount/agent_config/context/tissue_docs/: ovary.md
runtime/mount/agent_config/context/turn_behavior/: proactive.md  step_by_step.md
runtime/mount/agent_config/docs/: atlasxomics.md  atlasxomics_workflow.md  cell_type.md  cell_type_annotation.md  cosmx.md  lpath.py  marker_gene_cell_type_annotation.md  spatial_annotation.md  takara_workflow.md  vizgen_workflow.md  xenium.md
runtime/mount/agent_config/docs/plots_docs/: custom-plots.mdx  reactivity.mdx  widget-types.mdx
runtime/mount/agent_config/evals/: ARCHITECTURE.md  README.md  binary_grader.py  celltype_proportion_consistency_tbi_24hr_v1.json  cleanup_orphaned_processes.sh  cluster_workflow.json  drg_neuron_t1.json  eval_runner.py  eval_server.py  eval_types.py  explore_mini_swe.py  hsc_typing.json  hsc_typing_workflow.json  judge.py  kidney_major_20populations_distribution.json  make_json.py  mouse_brain_major_celltypes_marker_only_v2.json  mouse_brain_merfish_inhibitory_clusterwise_marker_jaccard_v3_ttest_onevsall.json  mouse_brain_merfish_neuron_clusterwise_marker_jaccard_v3_ttest_onevsall.json  mouse_brain_oligodendrocyte_canonical_expression_separation_v1.json  mouse_brain_oligodendrocyte_marker_genes_top20_v1.json  mouse_brain_pct_brain_ventricle_v4.json  mouse_brain_pct_corpus_callosum_v4.json  mouse_brain_pct_layer_II_III_v4.json  mouse_brain_pct_layer_VI_v4.json  mouse_brain_pct_layer_V_v4.json  mouse_brain_pct_olfactory_region_v4.json  mouse_brain_pct_pia_mater_v4.json  mouse_brain_pct_striatum_v4.json  promoter_annotation.json  result_cluster_workflow_001.json  result_drg_neuron_t1.json  result_hsc_typing_workflow_1.json  result_promoter_annotation_001.json  result_simple_markdown_001.json  run_batch_evals.py  run_local_eval.py  run_mini_swe_agent.py  simple_markdown.json  test_truncation_fix.json
runtime/mount/agent_config/evals/10x/: breast_cancer_bcells.json  breast_cancer_fibroblast.json  breast_cancer_luminal.json  breast_cancer_macrophage.json  breast_cancer_tcell_marker.json
runtime/mount/agent_config/evals/atlasxomics/: DESCRIPTION.md  brain_celltype_annotation_major_map.json  de.json  hsc_typing.json  merge_obs.json  mouse_brain_markers_oligodendrocyte.json
runtime/mount/agent_config/evals/curio_seeker_ovary/: background_removal.json  curio_filter_max_mt_pct.json  curio_hvg_selection.json  curio_mt_percentage.json  curio_normalization.json  curio_off_target.json  curio_total_umi_counts.json
runtime/mount/agent_config/evals/graders/: __init__.py  adjusted_mutual_information.py  base.py  boolean_check.py  cell_typing.py  distribution_comparison.py  label_set_jaccard.py  marker_gene_precision_recall.py  marker_gene_separation.py  numeric_tolerance.py  proportion_consistency.py  spatial_adjacency_simple.py
runtime/mount/agent_config/evals/results/: result_celltype_proportion_consistency_tbi_24hr_v1.json  result_curio_hvg_selection.json  result_curio_mt_percentage.json  result_curio_normalization.json  result_curio_normalization_positive.json  result_curio_normalization_validation.json  result_curio_off_target.json  result_kidney_major_20populations_distribution.json  result_mouse_brain_astrocyte_hier_marker_jaccard_v8.json  result_mouse_brain_major_celltypes_marker_only_v2.json  result_mouse_brain_merfish_inhibitory_onevsall_marker_jaccard_v5_ttest_min.json  result_mouse_brain_merfish_neuron_clusterwise_marker_jaccard_v1.json  result_mouse_brain_merfish_neuron_clusterwise_marker_jaccard_v2_ttest.json  result_mouse_brain_merfish_neuron_clusterwise_marker_jaccard_v3_ttest_onevsall.json  result_mouse_brain_pct_brain_ventricle_v4.json  (+11 more)
runtime/mount/agent_utils/: auto_install.py
runtime/mount/endpoints/: __init__.py  agent.py  headless.py  lsp.py  readyz.py  run.py  subsample.py
runtime/mount/loro/: notebook.py
runtime/mount/notebook/: __init__.py  notebook.py
runtime/mount/plotly_utils/: precalc_box.py  precalc_violin.py
runtime/mount/python_lib/lplots/: __init__.py  _inject.py  lplots  palettes.py  persistence.py  reactive.py  themes.py
sandbox/root/.latch/: session-id  token
wheels/: igraph-1.0.0-cp314-cp314t-macosx_11_0_arm64.whl  leidenalg-0.11.1.dev4+g36147642d.d20260212-cp314-cp314t-macosx_15_0_arm64.whl  leidenalg-0.11.1.dev4+g36147642d.d20260212-cp314-cp314t-manylinux_2_35_x86_64.manylinux_2_38_x86_64.whl  orjson-3.11.7-cp314-cp314t-macosx_11_0_arm64.whl
(+241 files in other folders)
