[project]
name = "latch-plots-faas"
version = "0.2.0"
description = "Latch Plots Runtime"
authors = [
    { name = "rteqs", email = "ryan@latch.bio" },
    { name = "maximsmol", email = "max@latch.bio" },
]
dependencies = [
    "latch-asgi>=1.0.1",
    "latch-o11y>=0.1.4",
    "uvloop>=0.19.0",
    "aiohttp>=3.9.3",
    "latch-postgres>=0.1.18",
    "numpy>=1.26.4",
    "plotly>=5.22.0",
    "psycopg<3.2",
    "latch>=2.65.1",
    "duckdb>=1.0.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "pillow>=11.0.0",
    "dill>=0.3.9",
    "anndata>=0.10.10",
    "anthropic>=0.71.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.2",
    "statsmodels>=0.14.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "CC0-1.0" }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["ruff>=0.9.5", "pandas>=2.2.2", "pyarrow>=17.0.0"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
preview = true

pydocstyle = { convention = "google" }
extend-select = [
    "F",
    "E",
    "W",
    # "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "ASYNC1",
    "S",
    # "BLE", # `raise x from y` does not work
    "FBT",
    "B",
    "A",
    # "COM",
    # "CPY",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    # "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "TD",
    # "FIX",
    # "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "A002",
    "A003",

    "ANN101",
    "ANN102",

    "E402",
    "E501",
    "E741",

    "C408",
    "C901",

    "T201",
    "T203",

    "D415",

    "SIM108",

    "S101",
    "S603",

    "N807",

    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",

    "TRY003",
    "TRY300",
    "TRY301",

    "FLY002",

    "PLW2901",
    "PLW0603",

    "PLR0904",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0916",
    "PLR0917",
    "PLR1702",
    "PLR2004",

    "TD001",
    "TD003",
    "TD006",

    "TID252",

    "PD901",

    # todo(maximsmol): reenable as soon as data-validation can support the `type` syntax
    "UP040",

    "SIM112",

    "PLC1901",

    "TCH002",
    "TC006",

    "PGH003", # todo(maximsmol): pyright ignores everything regardless of code

    "PYI041",
]

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = true

[tool.pyright]
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"

reportUnusedImport = "warning"
