[project]
name = "latch-plots-faas"
version = "0.3.0"
description = "Latch Plots Runtime"
authors = [
    { name = "rteqs", email = "ryan@latch.bio" },
    { name = "maximsmol", email = "max@latch.bio" },
]
dependencies = [
    "orjson @  /Users/ryanteoh/Code/orjson/target/wheels/orjson-3.11.7-cp314-cp314t-macosx_11_0_arm64.whl",
    "dill>=0.3.9",
    "numpy>=2.1",
    # hdf5 extension for pythonn
    "pandas[performance,aws,excel,parquet,compression]>=3.0.0",
    "scipy<1.17.0",
    "scikit-learn>=1.8.0",
    "scikit-misc",
    "plotly>=6.5.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "kaleido>=1.1.0",
    "pillow>=11.2.1",
    # "scanpy[leiden]>=1.12.0",
    # "leidenalg>=0.11.0", # todo(rteqs): some igraph broken dependency
    "squidpy>=1.8.0",
    "molviewspec",
    "dask>=2026.1.2",
    "latch-postgres>=0.2.2a",
    "duckdb>=1.4.4",
    "tabulate>=0.9.0",
    "anthropic>=0.71.0",
    "latch-asgi>=1.1.0",
    "latch-o11y>=1.2.0",
    "latch-config>=0.1.8",
    "aiohttp>=3.13.3",
    "uvloop>=0.22.1",
    "pyright[nodejs]>=1.1.408",
    "zarr>=3.1.5",
    "xarray>=2026.1.0",
    "molviewspec>=0.1.0",
    "playwright==1.57.0",
]
requires-python = "==3.14.*"
readme = "README.md"
license = { text = "CC0-1.0" }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.9.5", "pandas>=2.2.2", "pyarrow>=23.0.0"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
preview = true

pydocstyle = { convention = "google" }
extend-select = [
    "F",
    "E",
    "W",
    # "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "ASYNC1",
    "S",
    # "BLE", # `raise x from y` does not work
    "FBT",
    "B",
    "A",
    # "COM",
    # "CPY",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    # "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "TD",
    # "FIX",
    # "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "A002",
    "A003",

    "ANN101",
    "ANN102",

    "E402",
    "E501",
    "E741",

    "C408",
    "C901",

    "T201",
    "T203",

    "D415",

    "SIM108",

    "S101",
    "S603",

    "N807",

    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",

    "TRY003",
    "TRY300",
    "TRY301",

    "FLY002",

    "PLW2901",
    "PLW0603",

    "PLR0904",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0916",
    "PLR0917",
    "PLR1702",
    "PLR2004",

    "TD001",
    "TD003",
    "TD006",

    "TID252",

    "PD901",

    # todo(maximsmol): reenable as soon as data-validation can support the `type` syntax
    "UP040",

    "SIM112",

    "PLC1901",

    "TCH002",
    "TC006",

    "PGH003", # todo(maximsmol): pyright ignores everything regardless of code

    "PYI041",

    "UP037",
    "E731",
    "PLC0415",
]

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = true

[tool.pyright]
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"

reportUnusedImport = "warning"
